--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurent-management-api
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/menu_db
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_management
 spring.datasource.username=root
 spring.datasource.password=viki
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
